Improve spacing and screen reading for corrections block

--- a/ons_alpha/static_src/sass/components/_bulletin-header.scss
+++ b/ons_alpha/static_src/sass/components/_bulletin-header.scss
@@ -11,6 +11,10 @@
         margin-bottom: rem-sizing(40);
     }
 
+    &--flush {
+        margin-bottom: 0;
+    }
+
     &::before {
         position: absolute;
         inset: 0;
